syntax = "proto3";

package task;

service ManagingService {
    rpc CreateTask(Contact) returns (FlagResponse) {}
    rpc UpdateTask(UpdateTaskRequest) returns (FlagResponse) {}
    rpc SearchTask(SearchTaskRequest) returns (SearchTaskResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (FlagResponse) {}

    rpc CountTask(CountRequest) returns (CountTaskResponse) {}
    rpc GetAllTasks(GetAllRequest) returns (GetAllResponse) {}
}

message Contact {
    string id =1;
    string updated_at = 3;
    string search_at = 8;
    string deleted_at = 4;
    string name = 5;
    string email = 6;
    string number = 7;
    string age = 9;

  
}

message MakeDoneRequest {
    uint64 id = 1;
}



message UpdateTaskRequest{
    int64 id = 1;
    Contact task = 2;
}
message SearchTaskRequest{
    string id = 1;
    Contact task = 2;
}

message DeleteTaskRequest{
    int64 id = 1;
}

message GetAllRequest {}
message CountRequest {}

message GetAllResponse {
    repeated Contact tasks = 1;
}

message FlagResponse {
    bool flag = 1;
}

message SearchTaskResponse {
    repeated Contact tasks = 1;
}
message CountTaskResponse {
    int64 count = 1;
}